# rest_finance

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_SUMMARY.md  COMPLETION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  PHASES_1_2_3_README.md  PHASE_1_2_3_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_PLAN.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  main.py  manage.sh  pyproject.toml  requirements.txt  security_audit.sh
app/: __init__.py  constants.py  exceptions.py
app/api/: __init__.py  main.py  sample_data.py  templates_config.py
app/api/routes/: __init__.py  analytics_routes.py  file_routes.py  health_routes.py  mapping_routes.py  processing_routes.py  verification_routes.py  web_routes.py
app/config/: __init__.py  location_config.py  settings.py  source_mapping.py  verification_config.py
app/middleware/: __init__.py  correlation_middleware.py  error_middleware.py  logging_middleware.py
app/models/: __init__.py  file_models.py
app/monitoring/: __init__.py  metrics.py
app/services/: __init__.py  file_service.py  mapping_validation_service.py  pdf_service.py  processing_service.py  sample_data_service.py  validation_service.py  verification_service.py
app/static/css/: components.css  main.css  responsive.css
app/static/js/: api.js  components.js  main.js  source.js  source_analytics.js  utils.js  verification.js
app/templates/: base.html  mapping.html  source.html  source_analytics.html  verification.html
app/templates/pages/: analytics.html  dashboard.html  download.html  index.html  process.html  settings.html  upload.html
app/utils/: __init__.py  csv_loader.py  csv_utils.py  file_utils.py  logging.py  logging_enhanced.py  pdf_table_extractor.py
config/: .gitkeep  README.md  settings.py  settings_sample.py
docs/: VALIDATION_SYSTEM.md  api_reference.md  backend.md  bank_analytics.md  frontend.md  mapping.md  mapping_design.md  mapping_example.md  mapping_technical_spec.md  merchant_processing.md  modal_guidelines.md  next_level_recommendations.md  overview.md  pdf_extraction.md  project_status.md  validation.md
docs/guidelines/: modals.md
grafana_dashboards/: README.md  processing_metrics.json  system_health.json
scripts/: EXTRACT_GG_BATCHES_README.md  README.md  backend.env  extract_gg_merchant_batches.py  extract_pdf_table.py  frontend.env  manage_backend.sh  manage_frontend.sh
tests/: test_verification_service.py
tests/load/: locustfile.py
